# math-plus-plus

./: .gitignore  .lldbinit  CMakeLists.txt  LLDB_FORMATTERS.md  lldb_formatters.py  mathpp_lldb_formatters.py
.devcontainer/: devcontainer.json  setup-lldb.sh
.github/workflows/: ai-detector.yml  build.yml  default.yml  main.yml
include/math++/: math.h
src/: complex.h  curve.cpp  curve.h  helper.h  matrix.h  matrix_checks.h  matrix_decompositions.h  matrix_eigen.h  matrix_general.h  matrix_operators.h  matrix_transformations.h  rotation.h  vector.h  vector_checks.h  vector_general.h  vector_operators.h  vertex.h
tests/: CMakeLists.txt  helper.tests.cpp  matrix.checks.tests.cpp  matrix.general.tests.cpp  matrix.operators.test.cpp  matrix.test.cpp  matrix_general_tests.cpp  rotation.test.cpp  vector.test.cpp
